# egg

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
egg/: __init__.py  decorator.py  egg.py  exceptions.py  hatcher.py  tests.py  util.py
