[project]
name = "injegg"
version = "0.1.0"
description = "Lightweight async dependency injection framework for Python. Inspired by FastAPI's Depends."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Alejandro Jordan", email = "ajordanbojanic@gmail.com" }]
keywords = ["dependency-injection", "async", "di", "fastapi", "inject"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/ajordanb/egg"
Repository = "https://github.com/ajordanb/egg"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["egg"]
